<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:fillViewport="true"
        android:fadingEdge="vertical"
        android:requiresFadingEdge="vertical"
        android:fadingEdgeLength="100dp"
        android:backgroundTint="@color/color_dark_gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_bottom_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Event Banner Image -->
            <!-- change background later -->

            <!-- Event Title -->
            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/app_name"
                android:background="@color/color_dark_gray" />

            <TextView
                android:id="@+id/textEventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="12dp"
                android:text="Event Name"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/text_color" />

            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/border" />

            <!-- Organizer -->
            <TextView
                android:id="@+id/textOrganizer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="4dp"
                android:drawableStart="@drawable/material_symbols_person_outline"
                app:drawableTint="@color/color_dark_gray"
                android:textSize="16dp"
                android:textColor="@color/text_color" />

            <!-- Date/Time -->
            <TextView
                android:id="@+id/registration_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:drawableStart="@drawable/material_symbols_event_available"
                app:drawableTint="@color/color_light_green"
                android:text=" Time of event"
                android:textSize="16dp"
                android:textColor="@color/text_color" />

            <!-- Date/Time -->
            <TextView
                android:id="@+id/registration_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:drawableStart="@drawable/material_symbols_event_busy"
                app:drawableTint="@color/color_light_red"
                android:text=" Time of event"
                android:textSize="16dp"
                android:textColor="@color/text_color" />

            <!-- Date/Time -->
            <TextView
                android:id="@+id/event_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:drawableStart="@drawable/ic_round_schedule"
                app:drawableTint="@color/color_dark"
                android:text=" Time of event"
                android:textSize="16dp"
                android:textColor="@color/text_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <!-- Location -->
                <TextView
                    android:id="@+id/textLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="4dp"
                    android:drawableStart="@drawable/material_symbols_location_rounded"
                    app:drawableTint="@color/color_dark_purple"
                    android:text=" Location"
                    android:textSize="16dp"
                    android:textColor="@color/text_color" />

                <!-- Waiting List -->
                <TextView
                    android:id="@+id/textWaitingList"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="4dp"
                    android:textSize="16dp"
                    android:drawableStart="@drawable/material_symbols_group_outline"
                    app:drawableTint="@color/design_default_color_primary_variant"
                    android:text=" Waitlist count"
                    android:textColor="@color/text_color" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/border" />

            <!-- Description -->
            <TextView
                android:id="@+id/textGuidelines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="16dp"
                android:drawableStart="@drawable/material_symbols_rule_rounded"
                app:drawableTint="@color/color_dark_gray"
                android:text=" Here are some guidelines for the event."
                android:textSize="16sp"
                android:textColor="@color/text_color" />


            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/border" />

            <!-- Description -->
            <TextView
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="16dp"
                android:text="Here are some details about this event. This is a very important event, and without this event, there is no point of having any events."
                android:textSize="18sp"
                android:textColor="@color/text_color" />

            <!-- Comments Section -->
            <RelativeLayout
                android:id="@+id/enter_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/comment_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/color_light_gray"
                    android:src="@drawable/material_symbols_person_outline"/>

                <Button
                    android:id="@+id/send_comment"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:gravity="center"
                    android:layout_marginEnd="8dp"
                    app:backgroundTint="@color/color_light_green"
                    app:icon="@drawable/material_symbols_send_rounded"
                    app:iconTint="@color/color_dark"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:cornerRadius="12dp"
                    app:elevation="6dp"
                    android:elevation="6dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_type_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/comment_image"
                    android:layout_toStartOf="@id/send_comment"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="Enter comment..."
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxStrokeColor="@color/border"
                    app:hintTextColor="@color/text_color"
                    app:boxBackgroundColor="@color/color_light_gray"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/type_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences|textMultiLine"
                        android:textColor="@color/text_color"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text = "Comments"
                android:textColor="@color/text_color"
                android:textStyle = "bold" />
            <androidx.recyclerview.widget.RecyclerView
                android:id = "@+id/comments_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



    <!-- Bottom Buttons -->
    <LinearLayout
        android:id="@+id/layout_bottom_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <Button
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="Back"
            android:backgroundTint="@color/color_light_purple"
            android:textColor="@color/text_color"
            app:cornerRadius="12dp"
            app:strokeColor="@color/border"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/enrollButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="Join Waitlist"
            android:backgroundTint="@color/color_light_green"
            android:textColor="@color/text_color"
            app:cornerRadius="12dp"
            app:strokeColor="@color/border"
            app:strokeWidth="2dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>