...
            app:iconTint="@color/color_dark"
            app:iconSize="28dp"
            app:strokeColor="@color/color_dark"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/color_dark_purple"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            app:cornerRadius="10dp"
...
            app:strokeColor="@color/color_dark"
            app:strokeWidth="2dp" />
    </LinearLayout>

    <!-- Events RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/events_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:clipToPadding="true"
        android:scrollbars="vertical"
...
